<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:id="@+id/tvWelcome"
        android:textSize="35dp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etPhoneNumber"
        android:text="@string/enter_number"
        android:textSize="25dp"
        android:editable="false"
        android:layout_above="@+id/tvOr"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_text"
        android:id="@+id/tvOr"
        android:textColor="#ff1f2cff"
        android:textSize="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:text="@string/enter_email"
        android:layout_marginTop="45dp"
        android:textSize="25dp"
        android:focusable="false"
        android:layout_below="@+id/tvOr"
        android:layout_alignLeft="@+id/etPhoneNumber"
        android:layout_alignStart="@+id/etPhoneNumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:id="@+id/tvVerification"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:textSize="14dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue1"
        android:id="@+id/btContinue"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etEmail"
        android:layout_alignEnd="@+id/etEmail" />
</RelativeLayout>
